--- a/src/main/resources/templates/alimentos/actualizar.html
+++ b/src/main/resources/templates/alimentos/actualizar.html
@@ -21,9 +21,20 @@
                     <label for="precio">
                         Precio
                     </label>
-                    <input type="text" class="form-control" id="precio"
-                           th:field="*{precio}" th:value="${alimento.getPrecio()}"
-                           aria-describedby="precioHelp">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <i class="material-icons">
+                                    attach_money
+                                </i>
+                            </div>
+                        </div>
+                        <input type="number" class="form-control" id="precio"
+                               th:field="*{precio}"
+                               aria-describedby="precioHelp"
+                               th:value="${alimento.getPrecio()}"
+                               min="1.00" step="0.01">
+                    </div>
                     <small id="precioHelp" class="form-text text-muted">
                         Precio del alimento
                     </small>
@@ -41,11 +52,15 @@
                 </div>
                 <div class="form-group">
                     <label for="categoria">Categoria</label>
-                    <select class="form-control" id="categoria">
-                        <option th:each="categoria: ${categorias}" value="${categoria.id}">
-                            ${categoria.nombre}
+                    <select class="form-control" id="categoria" th:field="*{categoria}">
+                        <option th:each="categoria: ${categorias}"
+                        th:value="${categoria.getId()}" th:text="${categoria.getNombre()}"
+                        th:selected="${categoria.getId()==currentCategoryId}">
                         </option>
                     </select>
+                    <small id="categoriaHelp" class="form-text text-muted">
+                        Categoría del alimento
+                    </small>
                 </div>
                 <button type="submit" class="btn btn-primary">
                     Actualizar
