--- a/src/main/resources/templates/alimentos/crear.html
+++ b/src/main/resources/templates/alimentos/crear.html
@@ -10,7 +10,8 @@
                     </label>
                     <input type="text" class="form-control" id="nombre"
                            th:field="*{nombre}"
-                           aria-describedby="nombreHelp">
+                           aria-describedby="nombreHelp"
+                           placeholder="Nombre">
                     <small id="nombreHelp" class="form-text text-muted">
                         Nombre del alimento
                     </small>
@@ -19,9 +20,19 @@
                     <label for="precio">
                         Precio
                     </label>
-                    <input type="text" class="form-control" id="precio"
-                           th:field="*{precio}"
-                           aria-describedby="precioHelp">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <i class="material-icons">
+                                    attach_money
+                                </i>
+                            </div>
+                        </div>
+                        <input type="number" class="form-control" id="precio"
+                               th:field="*{precio}"
+                               aria-describedby="precioHelp"
+                               min="1.00" step="0.01">
+                    </div>
                     <small id="precioHelp" class="form-text text-muted">
                         Precio del alimento
                     </small>
@@ -32,7 +43,8 @@
                     </label>
                     <input type="text" class="form-control" id="descripcion"
                            th:field="*{descripcion}"
-                           aria-describedby="descripcionHelp">
+                           aria-describedby="descripcionHelp"
+                           placeholder="Descripción">
                     <small id="descripcionHelp" class="form-text text-muted">
                         Descripción del alimento
                     </small>
@@ -44,6 +56,9 @@
                         th:value="${categoria.getId()}" th:text="${categoria.getNombre()}">
                         </option>
                     </select>
+                    <small id="categoriaHelp" class="form-text text-muted">
+                        Categoría del alimento
+                    </small>
                 </div>
                 <button type="submit" class="btn btn-primary">
                     Crear
